# AceticsCli

./: Cargo.toml  config.example.toml  flake.nix  justfile
src/: acetics.rs  main.rs
